--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ who is a four-star general. Two officers have been conferred with the rank of fi
 a five-star rank, which is a ceremonial position of great honour
 </div>
 <div class="gif">
-<img src="image/marchingsolider.gif" alt="marching solider">
+<img src="marchingsolider.gif" alt="marching solider">
 </div>
 </body>
 </html>
